# serverless-http-server

./: .gitignore  Cargo.toml  README.md  justfile  pbcopy
.github/workflows/: rust.yml
application/: Cargo.toml
infra/: justfile  package-lock.json  package.json
infra/lib/: infra-stack.ts  service-stack.ts
service/: Cargo.toml  justfile
service/src/: main.rs  routes.rs  view.rs
src/: main.rs
volume/cache/: machine.json
