[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
maud = { version = "0.26.0", features = ["axum"] }
serde = "1.0.204"
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[dev-dependencies]
reqwest = "0.12.7"
